fix carousel position and margin

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -850,42 +850,6 @@ ul {
   padding: 4rem 0;
   margin: auto;
 
-  &__images {
-    position: relative;
-    display: inline-block;
-    margin: 0 0.5rem;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: -0.25rem;
-      left: -0.25rem;
-      right: -0.25rem;
-      bottom: -0.25rem;
-      background: $dark-color;
-      mask-image: url("../svg/polygon.svg");
-      -webkit-mask-image: url("../svg/polygon.svg");
-      mask-repeat: no-repeat;
-      -webkit-mask-repeat: no-repeat;
-      mask-size: cover;
-      -webkit-mask-size: contain;
-    }
-  }
-
-  &__mask {
-    mask-image: url("../svg/polygon.svg");
-    -webkit-mask-image: url("../svg/polygon.svg");
-    mask-repeat: no-repeat;
-    -webkit-mask-repeat: no-repeat;
-    mask-size: cover;
-    -webkit-mask-size: contain;
-  }
-
-  &__img {
-    width: 18rem;
-    height: 18rem;
-  }
-
   &__content {
     margin: 1.5rem 7%;
   }
@@ -921,6 +885,65 @@ ul {
         color: $purple-color;
       }
     }
+  }
+}
+
+// CAROUSEL
+
+.carousel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &__items {
+    position: relative;
+    width: 18rem;
+    height: 18rem;
+  }
+}
+
+// CAROUSEL ITEM
+
+.item {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  &__content {
+    position: relative;
+    display: inline-block;
+    //margin: 0 0.5rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -0.25rem;
+      left: -0.25rem;
+      right: -0.25rem;
+      bottom: -0.25rem;
+      background: $dark-color;
+      mask-image: url("../svg/polygon.svg");
+      -webkit-mask-image: url("../svg/polygon.svg");
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-size: cover;
+      -webkit-mask-size: contain;
+    }
+  }
+
+  &__mask {
+    mask-image: url("../svg/polygon.svg");
+    -webkit-mask-image: url("../svg/polygon.svg");
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-size: cover;
+    -webkit-mask-size: contain;
+  }
+
+  &__img {
+    width: 18rem;
+    height: 18rem;
   }
 }
 
@@ -968,11 +991,6 @@ ul {
   }
 
   .project {
-    &__img {
-      width: 22rem;
-      height: 22rem;
-    }
-
     &__content {
       margin: 2rem 12%;
     }
@@ -983,6 +1001,20 @@ ul {
 
     &__skills, &__links {
       margin: 2rem 0;
+    }
+  }
+
+  .carousel {
+    &__items {
+      width: 22rem;
+      height: 22rem;
+    }
+  }
+
+  .item {
+    &__img {
+      width: 22rem;
+      height: 22rem;
     }
   }
 }
@@ -1135,13 +1167,22 @@ ul {
   }
 
   .project {
-    &__img {
+    &__content {
+      margin: 2rem 15%;
+    }
+  }
+
+  .carousel {
+    &__items {
       width: 26rem;
       height: 26rem;
     }
+  }
 
-    &__content {
-      margin: 2rem 15%;
+  .item {
+    &__img {
+      width: 26rem;
+      height: 26rem;
     }
   }
 }
@@ -1196,15 +1237,6 @@ ul {
     flex-direction: row;
     text-align: start;
 
-    &__images {
-      margin: 0 1rem 0 2rem;
-    }
-
-    &__img {
-      width: 28rem;
-      height: 28rem;
-    }
-
     &__content {
       max-width: 38rem;
       margin: 0 3rem 0 1rem;
@@ -1222,14 +1254,24 @@ ul {
       }
     }
   }
+
+  .carousel {
+    &__items {
+      width: 28rem;
+      height: 28rem;
+    }
+  }
+
+  .item {
+    &__img {
+      width: 28rem;
+      height: 28rem;
+    }
+  }
 }
 
 @media all and (min-width: $x-large) {
   .project {
-    &__images {
-      margin: 0 2rem 0 2rem;
-    }
-
     &__img {
       width: 32rem;
       height: 32rem;
