add home style for xx-large media query

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -568,6 +568,7 @@ ul {
     position: absolute;
     color: $dark-color;
     transition: color 0.2s ease-in;
+    margin-top: 0.25rem;
 
     &:hover, &:focus-visible {
       color: $purple-color;
@@ -1252,6 +1253,16 @@ ul {
     margin: 1.5rem 2rem;
   }
 
+  .home {
+    &__title {
+      font-size: 2.5rem;
+    }
+
+    &__subtitle {
+      font-size: 1.5rem;
+    }
+  }
+
   .about {
     max-width: 48rem;
 
@@ -1318,6 +1329,8 @@ ul {
   }
 }
 
+// MEDIA QUERY - X-LARGE (1280p)
+
 @media all and (min-width: $x-large) {
   .project {
     &__img {
@@ -1328,6 +1341,20 @@ ul {
     &__content {
       max-width: 42rem;
       margin: 0 3rem 0 2rem;
+    }
+  }
+}
+
+// MEDIA QUERY - XX-LARGE (1536p)
+
+@media all and (min-width: $xx-large) {
+  .home {
+    &__title {
+      font-size: 2.75rem;
+    }
+
+    &__subtitle {
+      font-size: 1.75rem;
     }
   }
 }
