--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -125,8 +125,9 @@ ul {
 // HEADER
 
 .header {
-  position: fixed;
-  width: 100vw;
+  top: 0;
+  position: sticky;
+  width: 100%;
   max-width: 80rem;
 
   &__content {
