--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -117,6 +117,7 @@ ul {
 .app {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-height: 100vh;
   max-width: 80rem;
   margin: auto;
@@ -136,48 +137,6 @@ ul {
     justify-content: space-between;
     align-items: center;
     padding: 0.25rem 1rem;
-
-    &--scrolldown {
-      position: initial;
-      background-color: #464A4EB2;
-      backdrop-filter: blur(0.25rem);
-      -webkit-backdrop-filter: blur(0.25rem);
-      outline: thin solid $dark-color;
-
-      .header__logo svg {
-        color: $green-color;
-      }
-
-      .header__logo:hover svg,
-      .header__logo:focus-visible svg {
-        color: $purple-color;
-      }
-
-      .menu {
-        &__button-lines div {
-          background-color: $green-color;
-        }
-
-        &__link a {
-          color: $green-color;
-        }
-
-        &__link a:hover,
-        &__link a:focus-visible {
-          color: $purple-color;
-        }
-      }
-
-      .mode {
-        &__button {
-          color: $green-color;
-
-          &:hover, &:focus-visible {
-            color: $purple-color;
-          }
-        }
-      }
-    }
   }
 
   &__nav {
@@ -200,6 +159,50 @@ ul {
       transition: color 0.2s ease-in;
     }
   }
+
+  &--scrolldown {
+    .header__content {
+      position: initial;
+      background-color: #464A4EB2;
+      backdrop-filter: blur(0.25rem);
+      -webkit-backdrop-filter: blur(0.25rem);
+      outline: thin solid $dark-color;
+    }
+
+    .header__logo svg {
+      color: $green-color;
+    }
+
+    .header__logo:hover svg,
+    .header__logo:focus-visible svg {
+      color: $purple-color;
+    }
+
+    .menu {
+      &__button-lines div {
+        background-color: $green-color;
+      }
+
+      &__link a {
+        color: $green-color;
+      }
+
+      &__link a:hover,
+      &__link a:focus-visible {
+        color: $purple-color;
+      }
+    }
+
+    .mode {
+      &__button {
+        color: $green-color;
+
+        &:hover, &:focus-visible {
+          color: $purple-color;
+        }
+      }
+    }
+  }
 }
 
 // MENU
@@ -215,6 +218,7 @@ ul {
     align-items: center;
     background-color: rgba(70, 74, 78, 1);
     background-image: url("../svg/hexagon-8.svg");
+    background-repeat: no-repeat;
     backdrop-filter: blur(0.25rem);
     -webkit-backdrop-filter: blur(0.25rem);
     outline: thin solid $dark-color;
